--- a/css/style.css
+++ b/css/style.css
@@ -510,15 +510,15 @@ section {
 
 .blogs .box-container .box .content .icons a {
     color: var(--light-color);
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
-.blogs .box-container .box .content .icons a:hover {
+.blogs .box-container .box .content .icons a i:hover {
     color: var(--black);
 
 }
 
-.blogs .box-container .box .content .icons a i{
+.blogs .box-container .box .content .icons a i {
     color: var(--green);
     padding-right: .5rem;
 }
@@ -545,6 +545,7 @@ section {
 .footer .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 1.5rem;
 }
 
 .footer .box-container .box h3 {
@@ -570,8 +571,7 @@ section {
     padding-left: .5rem;
 }
 
-.footer .box-container .box .links:hover {
-
+.footer .box-container .box .links:hover i{
     padding-left: 2rem;
 }
 
@@ -583,21 +583,24 @@ section {
 
 }
 
-.footer .box-container .box .share a {
-    height: 4rem ;
-    width: 4rem ;
+.footer .box-container .box .share a i{
+    height: 4rem;
+    width: 4rem;
     line-height: 4rem;
     border-radius: .5rem;
-    font-size: 4rem;
+    font-size: 2rem;
     color: var(--black);
-    margin-left: .2rem;
+    margin-right: .2rem;
     background: #eee;
     text-align: center;
 }
-.footer .box-container .box .share a:hover{
-background: var(--green);
-color: #fff;
-}.footer .box-container .box  .email{
+
+.footer .box-container .box .share a:hover i{
+    background: var(--green);
+    color: #fff;
+}
+
+.footer .box-container .box .email {
     width: 100%;
     margin: .7rem 0;
     padding: 1rem;
@@ -607,21 +610,27 @@ color: #fff;
     color: var(--black);
     text-transform: none;
 }
-.footer .box-container .box  .payment-img{
+.footer .box-container .box .btn{
+    width: 100%;
+}
+
+.footer .box-container .box .payment-img {
     margin-top: 2rem;
     height: 3rem;
 }
-.footer .credit{
+
+.footer .credit {
     text-align: center;
     margin-top: 2rem;
-    padding: 2.5rem ;
+    padding: 2.5rem;
     font-size: 2rem;
     color: var(--black);
     border-top: var(--border);
 
 }
-.footer .credit span{
-color: var(--green);
+
+.footer .credit span {
+    color: var(--green);
 
 }
 
@@ -683,7 +692,8 @@ color: var(--green);
         font-size: 50%;
 
     }
-.footer{
-    text-align: center;
-}
+
+    .footer {
+        text-align: center;
+    }
 }
